# gemini

./: .gitignore  README.md  gemini-image.def  pyproject.toml  research-env.def  research-env.sbatch
configs/: data_config.yaml  model_config.yaml  prompt_config.yaml
experiments/: experiment_1.sh  experiment_1_desktop.sh  experiment_curated.sh
scripts/: plot_figures.py  run_benchmark.py  run_benchmark.sh
scripts/manu_scripts/: add_results.py  compute_sample_length_distribution.py  compute_sample_size.py  format_consensus_details.py  statistical_analysis.py  uncorrupt_csv.py
src/data/: data_loading.py  output_guiding.py  schemas.py
src/models/: llm_evaluation.py  llm_inference.py  llm_loader.py  logits_processors.py
src/utils/: run_utils.py
