[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Metadata
[project]
name = "Gemini-Extract"
version = "0.1.0"
description = "Project to extract and structure information from clinical text."
readme = "README.md"
authors = [
    { name = "Alban Bornet", email = "alban.bornet@unige.ch" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Dependencies (uv pip install -e .)
dependencies = [
    "vllm",
    "flashinfer-python",
    "transformers",
    "datasets",
    "huggingface_hub",
    "torch",
    "numpy",
    "pandas",
    "statsmodels",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "psutil",
    "json5",
    "PyYAML",
    "tenacity",
    "paramiko",
    "cryptography",
    "python-dotenv",
]

# Project links
[project.urls]
Homepage = "https://github.com/ds4dh/gemini"
Repository = "https://github.com/ds4dh/gemini"

# Development dependencies (uv pip install -e ".[dev]")
[project.optional-dependencies]
dev = [
    "ipdb",
    "pytest",
    "pytest-mock",
]

# Package discovery
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# # Configuration for Pytest
# [tool.pytest.ini_options]
# minversion = "7.0"
# testpaths = ["tests"]